sumo/tests/traci/ChangeVehicleValue/ChangeTarget/InvalidNodeId/options.traci
--no-step-log --net-file net.net.xml --route-files routes.rou.xml --remote-port 8817 --netstate-dump netstate_dump.xml TraCITestClient.exe -def testclient.prog -p 8817 -h localhost -o testclient_out.txt